--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -2,7 +2,7 @@ project:
   name: app
   description: Sample application
   longDescription: Sample application
-  website: https://acme.com/wesome-app
+  website: https://acme.com/awesome-app
   authors:
     - Andres Almiray
   license: Apache-2.0
@@ -15,42 +15,13 @@ project:
 release:
   github:
     overwrite: true
-    sign: true
-    discussionCategoryName: Announcements
+    #discussionCategoryName: Announcements
     changelog:
       formatted: ALWAYS
       format: '- {{commitShortHash}} {{commitTitle}}'
+      preset: conventional-commits
       contributors:
         format: '- {{contributorName}}{{#contributorUsernameAsLink}} ({{.}}){{/contributorUsernameAsLink}}'
-      labelers:
-        - label: 'feature'
-          title: 'feat:'
-        - label: 'issue'
-          title: 'fix:'
-        - label: 'task'
-          title: 'chore:'
-      categories:
-        - title: '🚀 Features'
-          labels:
-            - 'feature'
-        - title: '✅ Issues'
-          labels:
-            - 'issue'
-        - title: '🧰 Tasks'
-          labels:
-            - 'task'
-      replacers:
-        - search: 'feat: '
-        - search: 'fix: '
-        - search: 'chore: '
-
-signing:
-  active: always
-  armored: true
-
-packagers:
-  brew:
-    active: always
 
 distributions:
   app:
